refactor: 방어적 복사로 변경